hphp/hack/test/typecheck/function_pointer/instance_method.php.exp
File "instance_method.php", line 12, characters 13-15:
No static method 'foo' in A (did you mean instance method 'foo'?) (Typing[4090])
File "instance_method.php", line 3, characters 7-7:
Declaration of A is here
File "instance_method.php", line 13, characters 11-13:
No static method 'foo' in B (did you mean instance method 'foo'?) (Typing[4090])
File "instance_method.php", line 9, characters 7-7:
Declaration of B is here
File "instance_method.php", line 14, characters 13-15:
No static method 'foo' in B (did you mean instance method 'foo'?) (Typing[4090])
File "instance_method.php", line 9, characters 7-7:
Declaration of B is here
